<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.3</version>
		<relativePath/>
	</parent>

	<groupId>com.example</groupId>
	<artifactId>demo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>demo</name>
	<description>Demo project for Spring Boot with JWT and MySQL</description>

	<properties>
	<java.version>21</java.version>
</properties>

  <dependencies>
    <!-- Spring WebSocket -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-websocket</artifactId>
    </dependency>
    
    <!-- SockJS -->
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>sockjs-client</artifactId>
      <version>1.5.1</version>
    </dependency>
    
    <!-- STOMP Protocol Support -->
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>stomp-websocket</artifactId>
      <version>2.3.4</version>
    </dependency>
    
    <!-- Jakarta Validation API -->
    <dependency>
      <groupId>jakarta.validation</groupId>
      <artifactId>jakarta.validation-api</artifactId>
      <version>3.0.2</version>
    </dependency>
    
    <!-- Spring Data JPA -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>

    <!-- Spring Web (Servlet API) -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <!-- Jakarta Persistence API -->
    <dependency>
      <groupId>jakarta.persistence</groupId>
      <artifactId>jakarta.persistence-api</artifactId>
      <version>3.1.0</version>
    </dependency>

    <!-- Jakarta Servlet API -->
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>6.0.0</version>
      <scope>provided</scope>
    </dependency>

    <!-- Jackson Databind & Annotations -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
    </dependency>

    <!-- Spring Boot Starter Validation (optional, but often needed) -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
	<dependency>
	  <groupId>org.springframework.boot</groupId>
	  <artifactId>spring-boot-starter-security</artifactId>
	</dependency>

	<!-- MySQL Connector -->
	<dependency>
	  <groupId>com.mysql</groupId>
	  <artifactId>mysql-connector-j</artifactId>
	  <version>8.3.0</version>
	  <scope>runtime</scope>
	</dependency>

	<!-- JSON Web Token (JJWT) -->
	<dependency>
	  <groupId>io.jsonwebtoken</groupId>
	  <artifactId>jjwt-api</artifactId>
	  <version>0.11.5</version>
	</dependency>
	<dependency>
	  <groupId>io.jsonwebtoken</groupId>
	  <artifactId>jjwt-impl</artifactId>
	  <version>0.11.5</version>
	  <scope>runtime</scope>
	</dependency>
	<dependency>
	  <groupId>io.jsonwebtoken</groupId>
	  <artifactId>jjwt-jackson</artifactId>
	  <version>0.11.5</version>
	  <scope>runtime</scope>
	</dependency>

	<dependency>
	  <groupId>com.stripe</groupId>
	  <artifactId>stripe-java</artifactId>
	  <version>24.18.0</version>
	</dependency>
	<dependency>
	  <groupId>com.google.code.gson</groupId>
	  <artifactId>gson</artifactId>
	  <version>2.10.1</version>
	</dependency>
	<!-- Lombok (Compile-time only) -->
	<dependency>
	  <groupId>org.projectlombok</groupId>
	  <artifactId>lombok</artifactId>
	  <version>1.18.30</version>
	  <scope>provided</scope>
	</dependency>

	<!-- Spring Boot Test + JUnit 5 -->
	<dependency>
	  <groupId>org.springframework.boot</groupId>
	  <artifactId>spring-boot-starter-test</artifactId>
	  <scope>test</scope>
	</dependency>

	<dependency>
	  <groupId>org.junit.jupiter</groupId>
	  <artifactId>junit-jupiter</artifactId>
	  <version>5.10.0</version>
	  <scope>test</scope>
	</dependency>
  </dependencies>

	<build>
		<plugins>
			<!-- Compiler Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.30</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>

	  <!-- Spring Boot Plugin -->
	  <plugin>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-maven-plugin</artifactId>
		<version>3.1.3</version>
		<configuration>
		  <mainClass>com.example.SecondHandMarketplace.SecondHandApplication</mainClass>
		</configuration>
	  </plugin>
    </plugins>
  </build>

</project>
